# relixos

./: CMakeLists.txt  Makefile  README.md  all.py  boot.S  clean.py  configuration.json  configure.py  core.c  grub.cfg  linker.ld
boot/: boot.S  configuration.json
boot/boot_c/: boot.c  configuration.json
core/: boot.S  core.c  interrupt.c  pic.c  pit.c  serial.c
headers/: interrupt.h  io.h  pic.h  pit.h  serial.h  stdint.h
relix_core/: Cargo.toml
relix_core/src/: lib.rs
relix_core/src_c_cxx/: boot.S  boot.h  main.c
